     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  Trunk only (unreleased)

    Features added

      - the 'StructuredText' module is deprecated. Use zope.structuredtext
        instead

      - removed ZopeTutorial (Elvis is now really dead)

      - ZClasses are deprecated and should no longer be used.

      - ZGadyFlyDA/Gadfly is deprecated

      - Added a "clock server" servertype which allows users to
        configure methods that should be called periodically as if
        they were being called by a remote user agent on one of Zope's
        HTTP ports.  This is meant to replace wget+cron for some class
        of periodic callables.

        To use, create a "clock-server" directive section anywhere
        in your zope.conf file, like so:

         <clock-server>
            method /do_stuff
            period 60
            user admin
            password 123
            host localhost
         </clock-server>

        Any number of clock-server sections may be defined within a
        single zope.conf.  Note that you must specify a
        username/password combination with the appropriate level of
        access to call the method you've defined.  You can omit the
        username and password if the method is anonymously callable.
        Obviously the password is stored in the clear in the config
        file, so you need to protect the config file with filesystem
        security if the Zope account is privileged and those who have
        filesystem access should not see the password.

        Descriptions of the values within the clock-server section
        follow::

          method -- the traversal path (from the Zope root) to an