@@ -1,1 +1,7 @@
 # empty comment for winzip and friends
+
+import warnings
+warnings.warn('Using TextIndex is deprecated (will be removed in Zope '
+              '2.12). Use ZCTextIndex instead.',
+              DeprecationWarning,
+              stacklevel=2) 
